# devops-iu12-lab-6-cicd

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
app/: Dockerfile  pyproject.toml
app/src/: app.py
app/tests/: test_app.py
